update api docs and user routes
